# ckanext-push-errors

./: MANIFEST.in  README.md  conftest.py  pyproject.toml  test.ini
.github/workflows/: test-2.10.yml  test-2.11.yml  test.yml
ckanext/push_errors/: error_logger.py  logging.py  plugin.py  redis.py
ckanext/push_errors/actions/: push_errors.py
ckanext/push_errors/assets/: script.js  webassets.yml
ckanext/push_errors/blueprints/: __init__.py  push_errors.py
ckanext/push_errors/cli/: __init__.py  base.py
ckanext/push_errors/tests/: conftest.py  fixtures.py  test_cli.py  test_logging.py  test_plugin.py  test_push_errors.py  test_push_errors_plugin.py  test_push_menssage.py  test_push_message.py
